# QA-Training

./: README.md  pyproject.toml
automation-Web-UI/: TestCase-Ticktick.py
automation-Web-UI/tests/: browser_factory.py  config_variables.py  driver_singleton.py  element_builder.py  page_elements.py  test_task_management.py
